<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/regscrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#EF6C00"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickname_hint"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname_hint"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_register_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_reg_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnreg"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="357dp"
        android:layout_height="357dp"
        android:paddingLeft="16dp"
        app:srcCompat="@drawable/beercat"
        tools:ignore="ImageContrastCheck" />

</LinearLayout>